Fix command box too big

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -223,7 +223,8 @@
 
 #commandTextField {
     -fx-font-size: 20pt;
-    -fx-padding: 1em;
+    -fx-padding: 4pt;
+    -fx-max-height: 42pt;
 }
 
 .helpBox .label {
